--- a/Week-4-project/nft-collection-backend/package.json
+++ b/Week-4-project/nft-collection-backend/package.json
@@ -26,8 +26,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.0.5",
+    "@types/multer": "^1.4.7",
     "crypto-js": "^4.1.1",
     "ethers": "^5.6.9",
+    "ipfs-http-client": "^56.0.3",
     "node-json-db": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -41,7 +43,6 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
-    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
